--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">USB</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">USB</string>
     <string name="updateUnableToInstall">Unable To Update</string>
     <string name="updateAvailable">Update Available</string>
     <string name="updateRequired">Update Required</string>
@@ -9,5 +9,5 @@
     <string name="usbUpdateUnableToInstallMessage">An error occured when installing the Urban Sciences Building update. Please try again.</string>
     <string name="install">Install</string>
     <string name="cancel">Cancel</string>
-    <string name="tryAgain">Try Again</string>
+    <string name="retry">Retry</string>
 </resources>
