--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <!--usb update manager start-->
     <string name="urbanSciencesBuildingShorthand">USB</string>
+    <string name="urbanSciencesBuilding">Urban Sciences Building</string>
     <string name="updateUnableToInstall">Unable To Update</string>
     <string name="updateAvailable">Update Available</string>
     <string name="updateRequired">Update Required</string>
@@ -32,11 +33,20 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="more">More</string>
     <!--drawer end-->
+
+    <!--tour start-->
+    <string name="tour">Tour</string>
+    <!--tour end-->
 
     <!--café start-->
     <string name="cafe">Café</string>
     <!--café end-->
+
+    <!--settings start-->
+    <string name="settings">Settings</string>
+    <!--settings end-->
 
     <!--dashboard start-->
     <string name="dashboard">Dashboard</string>
@@ -51,5 +61,8 @@
     <!--opening hours start-->
     <string name="open">Open</string>
     <string name="closed">Closed</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
     <!--opening hours end-->
 </resources>
