--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <!--usb update manager end-->
 
     <!--navigation start-->
+    <string name="navigation">Navigation</string>
     <string name="directionForward">Continue forward</string>
     <string name="directionLeft">Turn left</string>
     <string name="directionSlightLeft">Turn slightly left</string>
@@ -50,6 +51,8 @@
 
     <!--settings start-->
     <string name="settings">Settings</string>
+    <string name="navigationRequireLifts">Accessible Route</string>
+    <string name="navigationRequireLiftsDescription">Use lifts when changing floors</string>
     <!--settings end-->
 
     <!--dashboard start-->
@@ -65,8 +68,4 @@
     <!--opening hours start-->
     <string name="open">Open</string>
     <string name="closed">Closed</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <!--opening hours end-->
 </resources>
