--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="updateUnableToInstall">Unable To Update</string>
     <string name="updateAvailable">Update Available</string>
     <string name="updateRequired">Update Required</string>
+    <string name="updateInProgress">Updating Urban Sciences Building</string>
+    <string name="pleaseWait">Please wait</string>
     <string name="usbUpdateAvailableInstallMessage">An update for the Urban Sciences Building is available. Do you want to install this update now?</string>
     <string name="usbUpdateRequiredInstallMessage">An update for the Urban Sciences Building is required.</string>
     <string name="usbUpdateUnableToInstallMessage">An error occurred when installing the Urban Sciences Building update. Please try again.</string>
