Fixed search for staff members, fixed duplicate search results, added StaffMemberActivity, added alternate room names, added staff phone numbers

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,9 @@
     <!--opening hours start-->
     <string name="open">Open</string>
     <string name="closed">Closed</string>
+    <!--opening hours end-->
+
+    <!--staff members start-->
+    <string name="staffDetails">Staff Details</string>
+    <!--staff members end-->
 </resources>
