Added navigation functionality to Search UI.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="navigationLiftDown">Take the lift down to floor %s</string>
     <string name="navigationStairUp">Take the stairs up to floor %s</string>
     <string name="navigationStairDown">Take the stairs down to floor %s</string>
+    <string name="navigationDestinationReached">You have reached your destination!</string>
     <!--navigation end-->
 
     <!--drawer start-->
