--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,20 +26,16 @@
     <string name="navigationRight">Turn right</string>
     <string name="navigationModerateRight">Turn slightly right</string>
     <string name="navigationSharpRight">Turn sharp right</string>
-    <string name="navigationLiftUp">Take the lift up to floor %s</string>
-    <string name="navigationLiftDown">Take the lift down to floor %s</string>
-    <string name="navigationStairUp">Take the stairs up to floor %s</string>
-    <string name="navigationStairDown">Take the stairs down to floor %s</string>
+    <string name="navigationLiftUp">Take the lift up to %s</string>
+    <string name="navigationLiftDown">Take the lift down to %s</string>
+    <string name="navigationStairUp">Take the stairs up to %s</string>
+    <string name="navigationStairDown">Take the stairs down to %s</string>
     <string name="navigationDestinationReached">You have reached your destination!</string>
     <!--navigation end-->
 
     <!--drawer start-->
-    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="more">More</string>
     <!--drawer end-->
@@ -75,6 +71,7 @@
     <string name="reasonCafeMenuItem">Café</string>
     <string name="reasonResource">Resource</string>
     <string name="reasonEmail">Email Address</string>
+    <string name="groundFloor">Ground Floor</string>
     <string name="floor">Floor</string>
     <string name="room">Room</string>
     <string name="secondInstanceHint">Select your current location</string>
