Added navigation info bar to Navigation UI.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,9 @@
     <string name="navigationStairDown">Take the stairs down to %s</string>
     <string name="navigationDestinationReached">You have reached your destination!</string>
 
+    <string name="navigationFromText">From:</string>
+    <string name="navigationToText">To:</string>
+
     <string name="navigationCompass">Compass</string>
     <string name="navigationCompassHint">Turn to align the arrows</string>
     <!--navigation end-->
