--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,12 +68,13 @@
     <!--dashboard start-->
     <string name="dashboard">Dashboard</string>
     <string name="titleTour">Tour Guide</string>
-    <string name="descTour">Take a tour!</string>
-    <string name="titleNav">Navigation</string>
-    <string name="descNav">Navigate the USB</string>
+    <string name="descTour">Take a tour</string>
+    <string name="titleNav">Get Directions</string>
+    <string name="descNav">Find a room</string>
     <string name="roomName">Room Name</string>
     <string name="available">Available PCs</string>
-    <string name="tourIcon">Tour icon</string>
+    <string name="building">Building</string>
+    <string name="outOfHours">Out Of Hours</string>
     <string name="navigationIcon">Navigation icon</string>
     <!--dashboard end-->
 
