--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
 
     <!--tour start-->
     <string name="tour">Tour</string>
+    <string name="tourTitle">Building Tour</string>
     <!--tour end-->
 
     <!--café start-->
