Improved descriptions of floor changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,10 +40,12 @@
     <string name="navigationFromText">From:</string>
     <string name="navigationToText">To:</string>
     <string name="navigationTooltip">Get Directions</string>
-
     <string name="navigationCompass">Compass</string>
+    <string name="navigationCompassDone">Done</string>
     <string name="navigationCompassHint">Turn to align the arrows</string>
     <string name="navigationTourCompassHint">The building tour begins at the main entrance</string>
+    <string name="navigationGoUp">Up</string>
+    <string name="navigationGoDown">Down</string>
 
     <!--navigation end-->
 
