--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,9 +87,9 @@
     <string name="building">Building</string>
     <string name="outOfHours">Out Of Hours</string>
     <string name="navigationIcon">Navigation icon</string>
-    <string name="availableComputers">Available</string>
+    <string name="availableComputers">Computer Availability</string>
     <string name="roomName">Room</string>
-    <string name="badNetworkTitle">Unable To Load</string>
+    <string name="badNetworkTitle">Unable To Update</string>
     <string name="badNetworkDetail">Please connect to \"newcastle-university\" WiFi with your university credentials to view live computer availability</string>
     <!--dashboard end-->
 
